refactor(InternalUserController): simplify list collection using toList() method
https://sonarcloud.io/project/issues?open=AZ0K0akZpudfG5AZ_gXH&id=apsas-backend